--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,72 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  font-size: 12px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.container {
+  width: 70%;
+  height: 350px;
+  padding: 0 10px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.wrapper {
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: 0 0 25px 5px rgba(0,0,0,.1);
+  overflow-x: scroll;
+  height: 300px;
+  white-space: nowrap;
+}
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+thead {
+  background-color: #f5f5f5;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 3;
+  text-align: left;
+}
+tr th, tr td {
+  padding: 15px 10px;
+}
+button {
+  background-color: #f5f5f5;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  transition: .3s;
+  margin: 0 2px;
+}
+button:hover {
+  background-color: #000;
+  color: #f5f5f5;
+  cursor: pointer;
+}
+thead tr th:nth-child(1) {
+  background-color: #f5f5f5;
+  position: sticky;
+  left: 0;
+  z-index: 4;
+}
+tr td:nth-child(1) {
+  background-color: white;
+  position: sticky;
+  left: 0;
+  z-index: 2;
+}
+
+
