--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
   font-size: 12px;
+  background-color: rgb(255, 249, 240);
 }
 
 code {
@@ -35,7 +36,7 @@ table {
   width: 100%;
 }
 thead {
-  background-color: #f5f5f5;
+  background-color: #e0e0e0;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   position: sticky;
@@ -48,7 +49,7 @@ tr th, tr td {
   padding: 15px 10px;
 }
 button {
-  background-color: #f5f5f5;
+  background-color: #e0e0e0;
   border: none;
   border-radius: 5px;
   padding: 10px;
@@ -57,17 +58,17 @@ button {
 }
 button:hover {
   background-color: #000;
-  color: #f5f5f5;
+  color: #e0e0e0;
   cursor: pointer;
 }
 thead tr th:nth-child(1) {
-  background-color: #f5f5f5;
+  background-color: #e0e0e0;
   position: sticky;
   left: 0;
   z-index: 4;
 }
 tr td:nth-child(1) {
-  background-color: white;
+  background-color: rgb(255, 249, 240);
   position: sticky;
   left: 0;
   z-index: 2;
