--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ code {
   width: 70%;
   height: 350px;
   padding: 0 10px;
-  margin: 0 auto;
+  margin: 20px auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -28,7 +28,7 @@ code {
   border-radius: 10px;
   box-shadow: 0 0 25px 5px rgba(0,0,0,.1);
   overflow-x: scroll;
-  height: 300px;
+  height: 380px;
   white-space: nowrap;
 }
 table {
@@ -44,6 +44,9 @@ thead {
   left: 0;
   z-index: 3;
   text-align: left;
+}
+th[colSpan] {
+  padding-bottom: 0;
 }
 tr th, tr td {
   padding: 15px 10px;
@@ -68,7 +71,6 @@ thead tr th:nth-child(1) {
   z-index: 4;
 }
 tr td:nth-child(1) {
-  background-color: rgb(255, 249, 240);
   position: sticky;
   left: 0;
   z-index: 2;
