--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
-  font-size: 12px;
+  font-size: 14px !important;
   background-color: rgb(255, 249, 240);
 }
 
@@ -52,18 +52,9 @@ tr th, tr td {
   padding: 15px 10px;
 }
 button {
-  background-color: #e0e0e0;
-  border: none;
-  border-radius: 5px;
-  padding: 10px;
-  transition: .3s;
-  margin: 0 2px;
+  margin: 0 2px !important;
 }
-button:hover {
-  background-color: #000;
-  color: #e0e0e0;
-  cursor: pointer;
-}
+
 thead tr th:nth-child(1) {
   background-color: #e0e0e0;
   position: sticky;
@@ -71,6 +62,7 @@ thead tr th:nth-child(1) {
   z-index: 4;
 }
 tr td:nth-child(1) {
+  background-color: white;
   position: sticky;
   left: 0;
   z-index: 2;
