--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ th[colSpan] {
   padding-bottom: 0;
 }
 tr th, tr td {
-  padding: 15px 10px;
+  padding: 10px 10px;
 }
 button {
   margin: 0 2px !important;
@@ -66,4 +66,8 @@ tr td:nth-child(1) {
   position: sticky;
   left: 0;
   z-index: 2;
+}
+.form-select {
+  font-size: 14px !important;
+  padding: 0 30px !important;
 }
